# EstructuraDatos

./: CMakeLists.txt  README.md
Tema0/: Practica1.c
Tema1/: Ejemplo1.c  Practica2.c
Tema2/: circuito.c  circuito.h  complejo.c  complejo.h  main.c
Tema2_0/: Bitmap.c  main.c
Tema3/: Elemento.c  ListaEstatica.c  ListaEstatica.h
Tema3_1/: Elemento.c  Elemento.h  ListaEnlazada.c  ListaEnlazada.h  main.c
Tema3_2/: elemento.c  elemento.h  listadinamica.c  listadinamica.h
